--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,6 @@
 @import "tailwindcss";
 
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -20,6 +21,7 @@
 }
 
 body {
+  background-color: red;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
